<resources>
    <string name="app_name">OutOfBounds</string>

    <string name="action_settings">Settings</string>
    <string name="golf">Out of Bounds</string>
    <string name="title_activity_arhandler">ARHandlerActivity</string>
    <string name="title_activity_play">Play</string>
    <string name="playbutton">Play golf</string>
    <string name="mapbutton">Set hole position</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="maptext">GPS-data will be shown here</string>
    <string name="distance">Distance to hole:</string>
    <string name="swingbutton">Stroke</string>
    <string name="swingtext">Swing</string>
    <string name="swingtext2">Swing!</string>
    <string name="oktext">Continue</string>
    <string name="title_activity_swing">Swing</string>
    <string name="driver">Driver</string>
    <string name="wedge">Wedge</string>
    <string name="iron">Iron</string>
    <string name="club">Choose club</string>
    <string name="finishtext">Play again</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_win">Win</string>
    <string name="readytoswing">Ready</string>
    <string name="swinginfo">Place phone in swing position and press Ready</string>
</resources>
